# TranscritorSemantico

./: .gitignore  .gitmodules  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/transcritorsemantico/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: whisper-base.EUROPEAN_UNION.tokens
app/src/main/java/com/example/transcritorsemantico/: MainActivity.kt
app/src/main/java/com/example/transcritorsemantico/audio/: RecorderEngine.kt  TranscriptionEngine.kt
app/src/main/java/com/example/transcritorsemantico/data/: Models.kt  SessionStorage.kt
app/src/main/java/com/example/transcritorsemantico/litert/: GemmaAudioLiteRtLmTranscriber.kt  LiteRtModelManager.kt  WhisperLiteRtTranscriber.kt
app/src/main/java/com/example/transcritorsemantico/semantic/: LocalSemanticEngine.kt
app/src/main/java/com/example/transcritorsemantico/transcription/: BatchTranscriber.kt
app/src/main/java/com/example/transcritorsemantico/ui/: MainViewModel.kt  MemoryWaveApp.kt
app/src/main/java/com/example/transcritorsemantico/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/transcritorsemantico/whisper/: AudioDecodeUtil.kt  WhisperFileTranscriber.kt  WhisperModel.kt  WhisperModelManager.kt  WhisperVad.kt
app/src/main/java/com/whispercpp/whisper/: LibWhisper.kt  WhisperCpuConfig.kt
app/src/main/jni/whisper/: CMakeLists.txt  jni.c
app/src/main/res/drawable/: ic_memorywave_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/transcritorsemantico/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scratch/: inspect_tflite.py
